--- a/1_data_import.Rmd
+++ b/1_data_import.Rmd
@@ -16,15 +16,16 @@ library(formr)
 library(devtools)
 library(haven)
 # devtools::install_github("hadley/haven")
-library(plyr)
 library(tidyr)
 library(ggplot2)
 library(stringr)
 library(dplyr)
+library(GPArotation)
 ```
 
 ## Helper
 ```{r}
+### Function to calculate the birthdate out of all available informations for one individual
 all_available_info_birth_date = function(byear, bmonth, bday = NULL) {
   if(!is.null(bday)) {
     bday = paste0("-", bday)
@@ -39,7 +40,7 @@ all_available_info_birth_date = function(byear, bmonth, bday = NULL) {
   #           2016-01
 }
 
-#' ##### only older sibs
+##### Function to calculate the birthorder based on the siblings still alive at the time of birth
 older_sibs_alive_and_dependent = function(byear, dyear) {
 	sibs = length(byear)
 	older_sibs_alive_and_dependent = integer(length=sibs)
@@ -67,247 +68,277 @@ older_sibs_alive_and_dependent = function(byear, dyear) {
 
 ## Load data
 ```{r Load data}
-### Individual and household Information
-## Informations about individuals living in the household in 2014/2015
-# Individuals living in the household
-bk_ar1 = read_dta("data/hh14_all_dta/bk_ar1.dta")
-# Additional information from mothers
-b4_ba6 = read_dta("data/hh14_all_dta/b4_ba6.dta")
-
+### Informations about individuals living in the household in 2014/2015
+## All Individuals living in the household
+bk_ar1 = read_dta("data/hh14_all_dta/bk_ar1.dta") # Book K, Section ar
 # compute father pidlink
 bk_ar1 = left_join(bk_ar1, bk_ar1 %>% select(hhid14_9, pid14, pidlink) %>% rename(ar10 = pid14, father_pidlink = pidlink), by = c("hhid14_9", "ar10"))
 # compute mother pidlink
 bk_ar1 = left_join(bk_ar1, bk_ar1 %>% select(hhid14_9, pid14, pidlink) %>% rename(ar11 = pid14, mother_pidlink = pidlink), by = c("hhid14_9", "ar11"))
 
-### Informations about earlier waves
-ptrack = read_dta("data/hh14_all_dta/ptrack.dta")
+## Additional information from mothers (ever-maried women aged 15 - 57) about children that do not live in the household anymore
+# biological children
+b4_ba6 = read_dta("data/hh14_all_dta/b4_ba6.dta") # Book 4, Section ba6
+# adopted children
+b4_bx6 = read_dta("data/hh14_all_dta/b4_bx6.dta") # Book 4, Section bx6
+# Book used to find out who completed book 4 (to find out for which mothers we have all informations about their children)
+b4_cov = read_dta("data/hh14_all_dta/b4_cov.dta") # Book 4, Section cov
+
+
+## Additional informations from fathers (and mothers who did not complete Book 4) about children that do not live in the household anymore
+# biological and adopted children
+b3b_ba6 = read_dta("data/hh14_all_dta/b3b_ba6.dta") # Book 3b, Section ba6
+# Book used to find out who completed book 3b (to find out for which fathers/mothers we have all informations about their children)
+b3b_cov = read_dta("data/hh14_all_dta/b3b_cov.dta") # Book 3b, Section cov
+
+
 
 ### IQ Information
-ek_ek2 = read_dta("data/hh14_all_dta/ek_ek2.dta") # over 15yo
-ek_time2 = read_dta("data/hh14_all_dta/ek_time2.dta")
+ek_ek2 = read_dta("data/hh14_all_dta/ek_ek2.dta") # Book ek2
 # additional information (counting backwards, adaptive testing) for adults
-b3b_cob = read_dta("data/hh14_all_dta/b3b_cob.dta") # over 15yo
-b3b_co1 = read_dta("data/hh14_all_dta/b3b_co1.dta") # over 15yo
+b3b_cob = read_dta("data/hh14_all_dta/b3b_cob.dta") # Book 3b, Section cob
+b3b_co1 = read_dta("data/hh14_all_dta/b3b_co1.dta") # Book 3b, Section co1
 ### Personality Information (only for adults)
-b3b_psn = read_dta("data/hh14_all_dta/b3b_psn.dta") # over 15yo
+b3b_psn = read_dta("data/hh14_all_dta/b3b_psn.dta") # Book 3b, Section psn
 
 ### Risk taking
-b3a_si = read_dta("data/hh14_all_dta/b3a_si.dta")
+b3a_si = read_dta("data/hh14_all_dta/b3a_si.dta") # Book 3b, Section si
 
 ```
+
+## Determine parents that we can use for birthorder calcualations
+```{r parents for birthorder}
+### All women who completed book 4 (we have all informatios about their children)
+mothers_15_57 = b4_cov %>% select(pidlink)
+
+### All men and women >57 who completed book 3b (we have all informatios about their children)
+fathers_restmothers = b3b_cov %>% select(pidlink, sex) # include sex to determin wether we are talking about a mother or a father; 1 = male, 3 = female
+
+### All fathers that we have all informations that we need to compute birthorder for children
+fathers_allinfo = fathers_restmothers %>%
+  filter(sex==1)
+
+### All mothers that we have all inforamtions that we need to compute birthorder for children
+mothers_allinfo = fathers_restmothers %>%
+  filter(sex==3)
+mothers_allinfo = bind_rows(mothers_allinfo, mothers_15_57)
+mothers_allinfo = mothers_allinfo %>% distinct(pidlink, .keep_all = TRUE) # completed either book 4 or book 3b or both
+```
+
 
 
 
 ## Select individual data
 ```{r select individual data}
 ### Individuals
-individuals = bk_ar1 %>% select(hhid14_9, pidlink, father_pidlink, mother_pidlink, ar01a, ar02b, ar10, ar11, ar07, ar08day, ar08mth, ar08yr, ar09, ar18h)
+individuals = bk_ar1 %>% select(hhid14_9, pidlink, father_pidlink, mother_pidlink, ar01a, ar02b, ar10, ar11, ar07, ar08day, ar08mth, ar08yr, ar09, ar18eyr, ar18emth)
 #Rename variables to make it easier
-individuals <- rename(individuals, relation_to_HH_head = ar02b, fatherID = ar10, motherID = ar11, sex = ar07, age = ar09, alive = ar18h, status = ar01a) 
-# Remove duplicats:
-table(duplicated(individuals$pidlink))
-individuals <- individuals %>% distinct(pidlink, .keep_all = TRUE)
+individuals = rename(individuals, relation_to_HH_head = ar02b, fatherID = ar10, motherID = ar11, sex = ar07, age = ar09, status = ar01a, death_yr = ar18eyr, death_month = ar18emth) 
+# Remove duplicats (some people are mentioned in two households, e.g. because they moved in the last 12 months)
+individuals = individuals %>% distinct(pidlink, .keep_all = TRUE)
 
 
 ## people whose parents can not be identified have to be marked as NA:
 individuals$fatherID[ individuals$fatherID>50] = NA
 individuals$motherID[ individuals$motherID>50] = NA
 
-##create number that should be identical for all siblings in one family
-individuals <- unite(individuals,
-                  col = "hhid14_9_fatherID_motherID",
-                  hhid14_9, fatherID, motherID,
-                  sep = "_",
-                  remove = FALSE)
-individuals$hhid14_9_fatherID_motherID = ifelse(is.na(individuals$fatherID), NA, individuals$hhid14_9_fatherID_motherID)
-individuals$hhid14_9_fatherID_motherID = ifelse(is.na(individuals$motherID), NA, individuals$hhid14_9_fatherID_motherID)
+## people where we dont have any informations about all other children of their mother have to be marked
+# mother
+individuals$mother_reported_on_other_sibs = ifelse(individuals$mother_pidlink %in% mothers_allinfo$pidlink, 1, 0) ## compares mother_pidlink to all pidlinks that completed Book 3b or Book 4 and are female; 1 = all info, 0 = not all info
 
+
+
+
+## create mother_father_number that should be identical for all siblings in one family that share the same parents
 individuals = individuals %>% mutate(
   mother_father_dyad = stringr::str_c(father_pidlink, mother_pidlink)
-)
-
-crosstabs( ~ is.na(mother_father_dyad) + is.na(hhid14_9_fatherID_motherID), data = individuals)
-n_distinct(individuals$mother_father_dyad)
-n_distinct(individuals$hhid14_9_fatherID_motherID)
+) # father_pidlink and mother_pidlink; if one is missing = NA
 
 
-##calculate sibling size
-individuals = individuals %>% 
-   group_by(mother_father_dyad) %>%
-   mutate(siblingcount = n())
-individuals$siblingcount = ifelse(is.na(individuals$fatherID), NA, individuals$siblingcount)
-individuals$siblingcount = ifelse(is.na(individuals$motherID), NA, individuals$siblingcount)
-qplot(individuals$siblingcount)
-
-##calculate birth order
-# create date of birth
+## Create date of birth
+#Set all variables missing that have not been reported:
 individuals$ar08day[ individuals$ar08day>31] = NA
 individuals$ar08mth[ individuals$ar08mth>12] = NA
 individuals$ar08yr[ individuals$ar08yr>2016] = NA
 individuals$ar08day[ is.nan(individuals$ar08day) ] = NA
 individuals$ar08mth[ is.nan(individuals$ar08mth) ] = NA
 individuals$ar08yr[ is.nan(individuals$ar08yr)] = NA
+individuals$death_month[ individuals$death_month>12] = NA
+individuals$death_yr[ individuals$death_yr>2016] = NA
+individuals$death_month[ is.nan(individuals$death_month) ] = NA
+individuals$death_yr[ is.nan(individuals$death_yr)] = NA
 
+## Create variable that contains pidlink of mother and birthdate of child:
 individuals = individuals %>%
-    mutate(birth = 
-           ifelse(is.na(ar08yr), NA,
-           paste0(ar08yr, "-", ar08mth, "-", ar08day)
-           )
-  ) %>%
-  group_by(mother_father_dyad) %>%
-  mutate(birthorder = min_rank(birth)) %>%
-  group_by(mother_father_dyad, birth) %>%
-  mutate(multiple_birth = n()) %>%
-  group_by(mother_father_dyad) %>%
-  mutate(any_multiple_birth_in_fam = any(multiple_birth > 1))
-
-individuals$birthorder = ifelse(is.na(individuals$mother_father_dyad), NA, individuals$birthorder)
-individuals$multiple_birth = ifelse(is.na(individuals$mother_father_dyad), NA, individuals$multiple_birth)
-individuals$any_multiple_birth_in_fam = ifelse(is.na(individuals$mother_father_dyad), NA, individuals$any_multiple_birth_in_fam)
+    mutate(mother_birthdate = str_c(mother_pidlink, "-",
+          all_available_info_birth_date(ar08yr, ar08mth))) # mother_pidlink-YYYY-MM; is NA if birth_year is missing
 
 
-crosstabs(individuals$birthorder)
-crosstabs(individuals$multiple_birth)
-crosstabs(individuals[!duplicated(individuals$mother_father_dyad), ]$any_multiple_birth_in_fam)
-
-# only few individuals with missing byears
-crosstabs(~ is.na(ar08yr) + is.na(age), data = individuals)
-
-qplot(individuals$birthorder)
 ```
 
-## Compare with mother information
-```{r compare with mother information}
-motherinformations = b4_ba6 %>% select(hhid14_9, pidlink, ba63cx, ba64, ba64bmt, ba64byr, ba64c, ba65, ba65mt, ba65ayr, ba66, ba63n)
+## Select informations about additional siblings from mother
+```{r Select informations about additional sibilngs from mother}
+# We have three sources for informations about the children of one women: Biological children (Book 4, women aged 15-57 & maried), Adopted Children (Book 4, women aged 15-57 & maried), All children (Book 3b, >57 or never maried)
 
-#Rename variables to make it easier
-motherinformations <- rename(motherinformations, biologicalchild_m = ba63cx, sex_m = ba64,  birth_month_m = ba64bmt, birth_year_m = ba64byr, living_in_HH_m = ba64c, alive_m = ba65, death_month_m = ba65mt, death_year_m = ba65ayr, death_age_m = ba66,total_number_childs_m = ba63n, mother_pidlink = pidlink) 
+## Get all the informations about biological children (Book 4, women aged 15-57 & maried)
+motherinformations_bio = b4_ba6 %>% select(hhid14_9, pidlink, ba63cx, ba64, ba64bmt, ba64byr, ba65, ba65mt, ba65ayr, ba66)
+#Rename variables:
+motherinformations_bio = rename(motherinformations_bio, kind_of_child_m = ba63cx, sex_m = ba64,  birth_month_m = ba64bmt, birth_year_m = ba64byr, alive_m = ba65, death_month_m = ba65mt, death_year_m = ba65ayr, current_age_or_death_age_m = ba66, mother_pidlink = pidlink) 
 
-# Mothercheck
-individuals$mother_reported_on_other_sibs = ifelse(individuals$mother_pidlink %in% motherinformations$mother_pidlink, 1, 0)
-crosstabs(individuals$mother_reported_on_other_sibs)
+## Get all the informations about non-biological children (Book 4, women aged 15-57 & maried)
+motherinformations_adop = b4_bx6 %>% select(hhid14_9, pidlink, bx63cx, bx64, bx64bmt, bx64byr, bx65, bx65amt, bx65ayr, bx66)
+#Rename variables:
+motherinformations_adop = rename(motherinformations_adop, kind_of_child_m = bx63cx, sex_m = bx64,  birth_month_m = bx64bmt, birth_year_m = bx64byr, alive_m = bx65, death_month_m = bx65amt, death_year_m = bx65ayr, current_age_or_death_age_m = bx66, mother_pidlink = pidlink) 
 
-motherinformations$birth_year_m = (ifelse(motherinformations$birth_year_m<2016, motherinformations$birth_year_m, NA))
+## Get the rest informations (Book 3b, >57 or never maried)
+motherinformations_old = subset(b3b_ba6, pidlink %in% mothers_allinfo$pidlink) # we only want female participants
+motherinformations_old = motherinformations_old %>% select(hhid14_9, pidlink, ba63cx, ba64, ba64bmt, ba64byr, ba65, ba65amt, ba65ayr, ba66)
+# Rename variables:
+motherinformations_old = rename(motherinformations_old, kind_of_child_m = ba63cx, sex_m = ba64,  birth_month_m = ba64bmt, birth_year_m = ba64byr, alive_m = ba65, death_month_m = ba65amt, death_year_m = ba65ayr, current_age_or_death_age_m = ba66, mother_pidlink = pidlink) 
 
-motherinformations$birth_month_m = (ifelse(motherinformations$birth_month_m<13, motherinformations$birth_month_m, NA))
+## Combine all informations
+motherinformations = bind_rows(motherinformations_bio, motherinformations_adop)
+motherinformations = bind_rows(motherinformations, motherinformations_old)
 
-motherinformations$death_year_m = (ifelse(motherinformations$death_year_m<2016, motherinformations$death_year_m, NA))
-
-motherinformations$death_month_m = (ifelse(motherinformations$death_month_m<13, motherinformations$death_month_m, NA))
-
-missingness_patterns(motherinformations %>% select(mother_pidlink, birth_year_m, birth_month_m))
+## Create variable that contains pidlink of mother and birthdate of child:
+#Set all variables missing that have not been reported:
+motherinformations$birth_month_m[ motherinformations$birth_month_m>12] = NA
+motherinformations$birth_year_m[ motherinformations$birth_year_m>2016] = NA
+motherinformations$birth_month_m[ is.nan(motherinformations$birth_month_m) ] = NA
+motherinformations$birth_year_m[ is.nan(motherinformations$birth_year_m)] = NA
+motherinformations$death_month_m[ motherinformations$death_month_m>12] = NA
+motherinformations$death_year_m[ motherinformations$death_year_m>2016] = NA
+motherinformations$death_month_m[ is.nan(motherinformations$death_month_m) ] = NA
+motherinformations$death_year_m[ is.nan(motherinformations$death_year_m)] = NA
 
 motherinformations = motherinformations %>%
-    mutate(mother_birthdate = str_c(mother_pidlink, 
-          all_available_info_birth_date(birth_year_m, birth_month_m) ))
+    mutate(mother_birthdate = str_c(mother_pidlink, "-",
+          all_available_info_birth_date(birth_year_m, birth_month_m))) # mother_pidlink-YYYY-MM; is NA if birth_year is missing
 
-# remove all with unknown mothers/unknown birthmonths
+## Remove all with missing mothers/birth_years
 motherinformations = motherinformations %>%
   filter(!is.na(mother_birthdate))
 
-individuals = individuals %>%
-    mutate(mother_birthdate = str_c(mother_pidlink, 
-          all_available_info_birth_date(ar08yr, ar08mth) ))
-
-# remove all with unknown mothers/unknown birthmonths
-crosstabs(~ is.na(mother_birthdate) + mother_reported_on_other_sibs, data = individuals)
-
-individuals = individuals %>%
-  filter(!is.na(mother_birthdate), mother_reported_on_other_sibs == 1)
+## Remove duplicats (some children are reported both in the biological and in the adopted list - confusing question?)
+motherinformations = motherinformations %>% distinct(mother_birthdate, .keep_all = TRUE)
 
 
-# overlap between individuals and motherinfo
-length(intersect(individuals$mother_birthdate, motherinformations$mother_birthdate))
-
-ind_mbd = na.omit(individuals$mother_birthdate)
-ind_dupes = unique(ind_mbd[duplicated(ind_mbd)])
-length(ind_dupes)
-minfo_mbd = na.omit(motherinformations$mother_birthdate)
-minfo_dupes = unique(minfo_mbd[duplicated(minfo_mbd)])
-length(minfo_dupes)
-# overlap between duplicates in ind and minfo
-intersect(minfo_dupes, ind_dupes)
-# suboptimal solution: because twins and triplets are not uniquely identified in the motherinformations file. We're using the mother informations file mainly to get sibs MISSING from the indidivuals file, so this is not a big deal. We also get death dates > 12m ago from the minfo file, but individuals who died >12m ago are not in the individuals file.
-motherinformations = motherinformations %>% filter(! mother_birthdate %in% intersect(minfo_dupes, ind_dupes))
-
-length(union(motherinformations$mother_birthdate, individuals$mother_birthdate)) # expected size of parentscheck minus twins
-parentscheck = full_join(individuals, motherinformations, by = "mother_birthdate")
-nrow(parentscheck)
-
-parentscheck = parentscheck %>% aggregate2sources("mother_pidlink", "mother_pidlink.x", "mother_pidlink.y")
-
-parentscheck = parentscheck %>%
-  filter(!is.na(mother_birthdate), !is.na(mother_pidlink))
-
-
-bk_ar1$ar18h = as.numeric(as.character(bk_ar1$ar18h))
-bk_ar1$ar18h[is.nan(bk_ar1$ar18h)] = NA
-crosstabs(~ ar01a + ar18h, data = bk_ar1)
-crosstabs(~ bk_ar1$ar01a)
-crosstabs(parentscheck$alive_m + parentscheck$status) # almost no one died in last12m?
-### Social Birthorder - siblings by the time of birth
-parentscheck$alive_m = ifelse(is.na(parentscheck$alive_m), 1, parentscheck$alive_m)
-qplot(parentscheck$alive_m)
-
-qplot(parentscheck$death_age_m, binwidth=1)
-# all who're dead in our subset have their death date in minfo
-parentscheck = parentscheck %>% mutate(
-  death_year_m_agg = ifelse(is.na(death_year_m), birth_year_m + death_age_m, death_year_m),
-  death_date = all_available_info_birth_date(death_year_m_agg, death_month_m))
-
-### Biological Birthorder: Order in Uterus
-# only include biological childs
-parentscheck$biologicalchild_m = ifelse(
-  is.na(parentscheck$biologicalchild_m), 1, # those who don't have this var are from the individuals file and are biological kids
-  parentscheck$biologicalchild_m) # the ones from the minfo file can have a zero here (be adopted)
-
-parentscheck = parentscheck %>%
-    mutate(birth_ind = all_available_info_birth_date(ar08yr, ar08mth, ar08day),
-           birth_minfo = all_available_info_birth_date(birth_year_m, birth_month_m)) %>%
-    aggregate2sources("birth", "birth_ind", "birth_minfo")
-
-parentscheck = parentscheck %>%
-  group_by(mother_pidlink) %>%
-  mutate(
-    birth_bio = ifelse(biologicalchild_m == 1, birth, NA),
-    birthorder_uterus = min_rank(birth_bio),
-    siblingcount_maternal = sum(biologicalchild_m == 1),
-    
-    born_lived_5y = ifelse(death_age_m <= 5, NA, birth),
-    birthorder_min5y = min_rank(born_lived_5y),
-    siblingcount_min5y = sum(is.na(born_lived_5y)),
-    
-    birthorder_alive = older_sibs_alive_and_dependent(as.numeric(str_sub(birth, 1, 4)), death_year_m)
-    
-  ) %>%
-  group_by(mother_pidlink, birth) %>% # adopt
-  mutate(multiple_birth = sum(biologicalchild_m == 1)) %>%
-  group_by(mother_pidlink) %>%
-  mutate(any_multiple_birth_in_fam = any(multiple_birth > 1))
-
-ggplot(parentscheck, aes(x=siblingcount_maternal, y=birthorder_uterus)) + geom_jitter()
-ggplot(parentscheck, aes(x=siblingcount_maternal, y=birthorder_uterus)) + geom_jitter()
-
-# how to compute social birth order
-# count only those who're alive at own time of birth?
-# count only those who survived their own infancy?
-
-crosstabs(parentscheck$birthorder_min5y)
-qplot(parentscheck$birthorder_min5y, parentscheck$birthorder_uterus, geom = 'jitter')
-crosstabs(~ birthorder_min5y + birthorder_uterus, data = parentscheck)
-crosstabs(~ birthorder_alive + birthorder_uterus, data = parentscheck)
-qplot(parentscheck$birthorder_alive, parentscheck$birthorder_uterus, geom = 'jitter')
-
-table(parentscheck$living_in_HH_m==3)
-
-parentscheck = parentscheck %>% 
-   group_by(mother_pidlink) %>%
-   mutate(siblingcount_total = n())
-
-
-
-individuals_parents_checked = filter(parentscheck, age>14)
 ```
+
+
+
+## Combine informations from mother and individuals file
+```{r Combine informations from father, mother and individuals file}
+### For our future analysis we only want informations about individuals whose mother reported informations about all other siblings (living in the same HH and not living in the same HH)
+individuals_siblinginfos = individuals %>%
+  filter(mother_reported_on_other_sibs == 1)
+
+### Combination of individual data and motherinformations
+individualsinformations_only = left_join(individuals_siblinginfos, motherinformations, by = "mother_birthdate")
+motherinformations_only = anti_join(motherinformations, individuals_siblinginfos, by = "mother_birthdate") # all rows from motherinformations that do not occur in individuals
+parentscheck = bind_rows(individualsinformations_only, motherinformations_only) # combines all rows in individual that occur in motherinformationsfile only
+
+### All mother_pidlinks should be in one column:
+parentscheck$mother_pidlink = ifelse(is.na(parentscheck$mother_pidlink), parentscheck$mother_pidlink.x, parentscheck$mother_pidlink)
+
+### For the individuals that are only in the motherinformationsfile we do not have a pidlink - so we create one (counting from one to the end of all missing pidlinks is reached)
+parentscheck$pidlink = ifelse(is.na(parentscheck$pidlink), c(1:sum(is.na(parentscheck$pidlink))), parentscheck$pidlink)
+```
+
+
+
+## Birth Orders
+
+```{r Birth Orders}
+## Create a variable that contains the birthdate for all individuals:
+parentscheck = parentscheck %>%
+    mutate(birth_ind = all_available_info_birth_date(ar08yr, ar08mth, ar08day), # from individuals file
+           birth_parents = all_available_info_birth_date(birth_year_m, birth_month_m)) %>% # from parents file
+    aggregate2sources("birth", "birth_ind", "birth_parents") # aggregate both informations in one column
+
+#Remove missing birthdates:
+parentscheck = parentscheck %>%
+  filter(!is.na(birth))
+
+
+### Preperations
+## Biological Birthorder - Order in Uterus: We only want to include biological children: 
+# Modify kind_of_child_variable_m (1 = bio_child, 2 = stepchild, 3 = adopted):
+parentscheck$kind_of_child_m = ifelse(
+  is.na(parentscheck$kind_of_child_m), 1, # those who don't have this var are from the individuals file and are biological kids
+  parentscheck$kind_of_child_m) # the ones from the minfo file can be adopted, stepchildren, etc.
+
+# Create Birth for biological children:
+parentscheck = parentscheck %>%
+  mutate(birth_bio = ifelse(kind_of_child_m == 1, birth, NA))
+
+## Biological Birthorder - Genes
+# Create birth variable for siblings that share the same mother and father
+parentscheck = parentscheck %>%
+  mutate(birth_genes = ifelse(!is.na(mother_father_dyad), birth, NA))
+
+
+## Social Birthorder: Calculate Death Age:
+# We have two sources for death informations: The household roster (Book K, Section ar,) and the mother informations (Book 4). We need to combine the informations that we have
+parentscheck$alive_m = ifelse(is.na(parentscheck$alive_m), 1, parentscheck$alive_m) # 1=alive, 3=dead
+
+# For the mother informations file some age information is missing. So we calculate it by substracting the birthyear/deathyear from the year of the interview
+parentscheck$current_age_or_death_age_m = ifelse(!is.na(parentscheck$current_age_or_death_age_m), parentscheck$current_age_or_death_age_m, ifelse(parentscheck$alive_m==1, 2014-parentscheck$birth_year_m, NA))
+                                                  parentscheck$current_age_or_death_age_m = ifelse(!is.na(parentscheck$current_age_or_death_age_m), parentscheck$current_age_or_death_age_m, ifelse(parentscheck$alive_m==3, 2014-parentscheck$death_year_m, NA))
+                                                  
+# Now we aggregate the informations 
+parentscheck = parentscheck %>%
+  aggregate2sources("age_aggregated", "age", "current_age_or_death_age_m", remove_old_variables = FALSE)
+
+# And we create a variable that contains the age of death for every individual that died:
+parentscheck$death_age = ifelse(parentscheck$alive_m == 3, parentscheck$age_aggregated, NA)
+
+# Now we want the birthdates of all individuals that are either still alive or lived longer than 5 years
+parentscheck$birth_lived_5y = ifelse(parentscheck$alive_m == 1, parentscheck$birth, ifelse(parentscheck$death_age>5, parentscheck$birth, NA))
+
+
+### Birthorder calculations
+parentscheck = parentscheck %>%
+  group_by(mother_pidlink) %>%
+  mutate(birthorder_uterus = min_rank(birth_bio), # Biological Birthorder - Uterus
+         siblingcount_maternal = sum(kind_of_child_m == 1), # Biological Sibling Count
+         birthorder_alive = older_sibs_alive_and_dependent(as.numeric(str_sub(birth, 1, 4)), death_year_m), # calculates the birthorder of all siblings (bio&adopted) that are alive by the time of the own birth; mistak: starts with 0??
+         # mistake: i would like to calculate the siblingcount_alive - but how?
+         birthorder_min5y = min_rank(birth_lived_5y),# calculates the birthorder of all siblings (bio&adopted) that lived longer than 5 years
+         siblingcount_min5y = sum(!is.na(birth_lived_5y))) %>% # sibling count for one family for all siblings that lived longer than 5y
+  group_by(mother_father_dyad) %>%
+    mutate(birthorder_genes = min_rank(birth),
+           birthorder_genes = ifelse(is.na(mother_father_dyad), NA, birthorder_genes),
+           siblingcount_genes = sum(!is.na(mother_father_dyad))) %>%
+  group_by(mother_pidlink, birth) %>%
+  mutate(multiple_birth = sum(kind_of_child_m == 1)) %>% # Biological Multiple births (Uterus)
+  group_by(mother_pidlink) %>%
+  mutate(any_multiple_birth_in_fam = any(multiple_birth > 1)) # Any biological multiple births in one family?
+
+### Graphs
+## Biological Birthorder - Uterus
+qplot(parentscheck$birthorder_uterus)
+ggplot(parentscheck, aes(x=siblingcount_maternal, y=birthorder_uterus)) + geom_jitter()
+
+## Biological Birthorder - Genes
+qplot(parentscheck$birthorder_genes)
+ggplot(parentscheck, aes(x=siblingcount_genes, y=birthorder_genes)) + geom_jitter()
+
+## Social Birthorder - min 5 years
+qplot(parentscheck$birthorder_min5y)
+ggplot(parentscheck, aes(x=siblingcount_min5y, y=birthorder_min5y)) + geom_jitter()
+
+## Social Birthorder - alive at birth
+qplot(parentscheck$birthorder_alive)
+
+## Bio: Uterus vs. Genes
+ggplot(parentscheck, aes(x=birthorder_uterus, y=birthorder_genes)) + geom_jitter()
+
+## Social: min5years vs. alive at birth
+ggplot(parentscheck, aes(x=birthorder_min5y, y=birthorder_alive)) + geom_jitter()
+```
+
+
 
 ## Select IQ data
 ```{r select IQ data}
@@ -491,16 +522,14 @@ psych::alpha(data.frame(risk %>% select(riskA, riskB)), check.keys = T)
 
 ```{r merge data}
 ### Merge ALL data (including all participants)
-alldata = full_join(individuals_parents_checked, iq, by="pidlink")
-alldata = full_join(alldata, pers, by="pidlink")
-alldata = full_join(alldata, risk, by="pidlink")
+alldata_birthorder = left_join(parentscheck, iq, by="pidlink")
+alldata_birthorder = left_join(alldata_birthorder, pers, by="pidlink")
+alldata_birthorder = left_join(alldata_birthorder, risk, by="pidlink")
 
-### Merge PARENTS_CHECKED Data
-#alldata_parents_checked = left_join(individuals_parents_checked, iq, by="pidlink")
-#alldata_parents_checked = left_join(alldata_parents_checked, pers, by="pidlink")
-#alldata_parents_checked = left_join(alldata_parents_checked, risk, by="pidlink")
+alldata = left_join(individuals, iq, by="pidlink")
+alldata = left_join(alldata, pers, by="pidlink")
+alldata = left_join(alldata, risk, by="pidlink")
 
-#table(is.na(alldata_parents_checked$big5_ext))
 ```
 
 
@@ -543,11 +572,6 @@ qplot(alldata$big5_neu_t)
 ## Exploring data
 
 ``` {r exploring data}
-### Birth order and sibling size
-ggplot(alldata, aes(x=siblingcount, y=birthorder)) + geom_jitter()
-### Birth order and age
-ggplot(alldata, aes(x=birthorder, y=age)) + geom_jitter() + coord_cartesian(ylim = c(0, 100))
-
 ### Personality
 ggplot(alldata, aes(x=big5_agree, y=big5_neu)) + geom_jitter()
 
